--- a/RiskWeb/assets/css/game.css
+++ b/RiskWeb/assets/css/game.css
@@ -3,7 +3,7 @@ html {
     margin: 0;
     border-collapse: collapse;
     background-repeat: no-repeat;
-    background-image: url(/img/istockphoto-1060610740-170667a.jpg);
+    background-image: url("/assets/img/istockphoto-1060610740-170667a.jpg");
     background-size: cover;
 }
 
@@ -34,21 +34,19 @@ body {
     margin: 0;
     flex-direction: column;
     display: flex;
-    background-color:steelblue;
     padding: 12px;
     width: 70%;
     height: 80%;
     justify-content: center;
     align-items: center;
-    border-radius: 5%;
     min-width: 800px;
-    box-shadow: 2px 2px 20px 2px black;
 }
 h1 {
-    font-family: fantasy;
     color: black;
-    text-transform: uppercase;
     text-align: center;
+    font-family: 'Tangerine', cursive;
+    font-size: 70px;
+    padding: 3px;
 }
 
 .ligne {
@@ -69,31 +67,29 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
 }
 
 /* Continent Background */
 
 .terres-volcaniques {
     background-color: orangered;
-
 }
-
 .terres-cristalisees {
     background-color: violet;
 }
-
 .les-marecages {
     background-color: brown;
 }
-
 .les-cavernes {
     background-color: rosybrown;
 }
-
 .la-champignoneuse {
     background-color: darkgoldenrod;
 }
-
 .l-ilot-axel {
     background-color: mediumslateblue;
 }
@@ -114,4 +110,6 @@ h1 {
 }
 #box-list-player li{
     list-style:none;
+}.name-territory {
+    font-size: 12px;
 }
